changed the font to arial black and font sizes

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   --button-primary: #0a78be;
   --border: #e2e8f0;
   
-  --font-montserrat: "Montserrat", sans-serif;
+  --font-montserrat:"Arial Black";
 }
 
 /* 2. Manual Dark Mode Fix */
