--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 :root {
+  
   --background: #f8f0f0;
   --foreground: #171717;
   --card: #ffffffda;
@@ -42,10 +43,11 @@
 }
 
 body {
-    min-height: 100vh;
+
+      min-height: 100vh;
   background:
     radial-gradient(at top left,     #faf1f1 0%, transparent 70%),
-    radial-gradient(at top right,    #e5f0fa 0%, transparent 70%),
+    radial-gradient(at top right,    #faf1f1 0%, transparent 70%),
     radial-gradient(at bottom left,  #e5f0fa 0%, transparent 70%),
     radial-gradient(at bottom right, #e9f6ee 0%, transparent 70%);
   color: var(--foreground);
